Ajout choix OCR+indexation ou indexation seule.

--- a/SubLocation.ini
+++ b/SubLocation.ini
@@ -132,8 +132,8 @@ FRANCE
 			riviere_enverse
 			la_tour
 			la_vernaz
-			le_biot
-			les_gets
+			biot
+			gets
 			lullin
 			megevette
 			mieussy
@@ -224,7 +224,7 @@ FRANCE
 			cordon
 			demi_quartier
 			domancy
-			les_houches
+			houches
 			magland
 			megeve
 			passy
@@ -263,18 +263,18 @@ FRANCE
 			entremont
 			la_balme_de_thuy
 			la_clusaz
-			le_bouchet_mt_charvin
-			le_grand_bornand
+			bouchet_mt_charvin
+			grand_bornand
 			petit_bornand
-			le_reposoir
-			les_clefs
+			reposoir
+			clefs
 			manigod
 			mont_saxonnex
 			nancy_sur_cluses
 			saint_jean_de_sixt
 			serraval
 			thones
-			les_villards_thones
+			villards_thones
 		plateau_des_bornes
 			arbusigny
 			cruseilles
@@ -282,7 +282,7 @@ FRANCE
 			filliere
 			la_chapelle_rambaud
 			la_muraz
-			le_sappey
+			sappey
 			menthonnex_en_bornes
 			monnetier_mornex
 			naves_parmelan
