--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,6 @@ pytesseract.pytesseract.tesseract_cmd = C:\Users\pc\AppData\Local\Programs\Tesse
 config_tesseract = --psm 3 -l fra
 
 [Fichiers]
-directory = C:\Users\pc\Desktop\catal-photos-ONF-RTM74
+directory = C:\Users\pc\Desktop\catal-photos-ONF-RTM74\process
 nom_fichier_csv = donnees_photos.csv
 formatImg = *.jpg
