Ajout choix n°3: lien entre donnes_import.csv (nom_fichier ; ImageCaption) et donnes_photos.csv.

--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,7 @@ pytesseract.pytesseract.tesseract_cmd = C:\Users\pc\AppData\Local\Programs\Tesse
 config_tesseract = --psm 3 -l fra
 
 [Fichiers]
-directory = C:\Users\pc\Desktop\catal-photos-ONF-RTM74\process
+directory = C:\Users\pc\Desktop\ONF\catal-photos-ONF-RTM74\process
 nom_fichier_csv = donnees_photos.csv
+nom_fichier_imprt = donnees_import.csv
 formatImg = *.jpg
