Debuggage du mode 2 + Ajout du discriminant dans config.ini @TODO Gestion path absolu ou pas faut choisir @TODO le mode 3 à-il vraiment un intéret?

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [Localisation OCR]
 pytesseract.pytesseract.tesseract_cmd = C:\Users\pc\AppData\Local\Programs\Tesseract-OCR\tesseract.exe
-config_tesseract = --psm 3 -l fra
+config_tesseract = --psm 3 -l fra -c tessedit_char_whitelist=ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyzéèàûùëç°:.,)(" "
 
 [Fichiers]
 directory = C:\Users\pc\Desktop\ONF\catal-photos-ONF-RTM74\process
 nom_fichier_csv = donnees_photos.csv
 nom_fichier_imprt = donnees_import.csv
 formatImg = *.jpg
+id_OCR = A
