Pris en charges les erreurs Moye et La_Tour

--- a/SubLocation.ini
+++ b/SubLocation.ini
@@ -44,7 +44,6 @@ FRANCE
 			mesigny
 			minzier
 			montagny_les_lanches
-			moye
 			mures
 			musieges
 			nonglard
@@ -130,7 +129,7 @@ FRANCE
 			la_cote_d'arbroz
 			la_forclaz
 			riviere_enverse
-			la_tour
+			la_tour_
 			la_vernaz
 			biot
 			gets
